<resources>
    <string name="app_name">Smart Cities</string>
    <string name="button_factory">Factory</string>
    <string name="button_government">Government</string>
    <string name="button_Market">Market</string>
    <string name="button_NextTurn">NextTurn</string>
    <string name="inTurn">Year: </string>
    <string name="TotalMoney">TotalMoney: </string>
    <string name="Temperature">26.5°C</string>
    <string name="backMenu">Go back</string>

    <string name="splash_imgview">Smart Cities App logo</string>
    <string name="splash_title">Smart Cities - </string>
    <string name="splash_heading">Smart ∙</string>
    <string name="splash_cityname">Hong Kong</string>
    <string name="splash_citynamehint">Where do you live?</string>

    <string name="quizicon">+</string>
</resources>
