<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.climateSim.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TotalMoney"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/i_TotalMoney"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/i_Temperatur"
            android:layout_marginRight="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inTurn"
            android:textStyle="bold"
            android:textSize="25dp"
            android:id="@+id/i_Satisfaction"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/i_Temperatur"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Temperature"
        android:textSize="70dp"
        android:textStyle="bold"
        android:id="@+id/i_Temperatur"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_factory"
            android:id="@+id/i_button"
            android:onClick="onFactory"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="70dp"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_government"
            android:id="@+id/i_government"
            android:onClick="onGovernment"
            android:layout_alignTop="@+id/i_button"
            android:layout_toStartOf="@+id/i_Temperatur"
            android:layout_marginLeft="70dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Market"
            android:id="@+id/i_market"
            android:onClick="onMarket"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/i_Temperatur"
            android:layout_marginLeft="70dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_NextTurn"
            android:id="@+id/i_nextTurn"
            android:onClick="onNextTurn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="70dp"/>
    </LinearLayout>

</RelativeLayout>
