<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context="com.example.climateSim.A_Factory"
    android:background="@drawable/factory_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Factory"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        android:textSize="32dp"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UP1"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"
            android:textSize="24sp"
            android:id="@+id/i_up1"
            android:layout_marginTop="3dp"
            />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.27"
            android:max="5"
            android:progress="1"
            android:indeterminate="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lv. UP"
            android:id="@+id/i_buLvUp"
            android:layout_below="@+id/linearLayout"
            android:layout_toStartOf="@+id/i_maxUnit"
            android:layout_marginLeft="30dp"
            android:onClick="onLevelUp1" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cost: "
        android:textColor="@color/whiteColor"
        android:textSize="18dp"
        android:id="@+id/i_up1_cost"
        android:layout_below="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:weightSum="1"
        android:layout_below="@+id/i_up1_cost"
        android:layout_alignStart="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UP2"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"
            android:textSize="24sp"
            android:id="@+id/i_up2"
            />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.27"
            android:max="5"
            android:progress="1"
            android:indeterminate="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lv. UP"
            android:id="@+id/i_buLvUp2"
            android:layout_below="@+id/linearLayout"
            android:layout_toStartOf="@+id/i_maxUnit"
            android:layout_marginLeft="30dp"
            android:onClick="onLevelUp2" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cost: "
        android:textColor="@color/whiteColor"
        android:textSize="18dp"
        android:id="@+id/i_up1_cost2"

        android:layout_below="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:weightSum="1"
        android:layout_below="@+id/i_up1_cost2"
        android:layout_alignStart="@+id/i_up1_cost2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UP3"
            android:textColor="@color/whiteColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:id="@+id/textView"
              />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar3"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.27"
            android:max="5"
            android:progress="1"
            android:indeterminate="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lv. UP"
            android:id="@+id/button"
            android:layout_below="@+id/linearLayout"
            android:layout_toStartOf="@+id/i_maxUnit"
            android:layout_marginLeft="30dp"
            android:onClick="onLevelUp3" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4"
        android:layout_alignBottom="@+id/i_maxUnit">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cost: "
        android:textColor="@color/whiteColor"
        android:textSize="18dp"
        android:id="@+id/i_up1_cost3"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignStart="@+id/linearLayout3" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_below="@+id/i_up1_cost3"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current: 5"
            android:textColor="@color/whiteColor"
            android:textSize="18dp"
            android:id="@+id/i_curUnit"
            android:layout_above="@+id/i_unitBar"
            android:layout_marginLeft="3dp"
            android:layout_alignStart="@+id/i_unitBar" />

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/i_unitBar"
            android:max = "100"
            android:progress="5"
            android:onClick="onBack"
            android:indeterminate="false"
            android:layout_alignTop="@+id/i_toMenu"
            android:layout_alignParentStart="true"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cost:"
            android:textColor="@color/whiteColor"
            android:textSize="18dp"
            android:id="@+id/i_f_cost"
            android:layout_marginLeft="3dp"
             />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MaxUnit"
        android:textColor="@color/whiteColor"
        android:textSize="18dp"
        android:id="@+id/i_maxUnit"
        android:layout_alignBottom="@+id/linearLayout5"
        android:layout_toEndOf="@+id/linearLayout5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout7"

        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/linearLayout3">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_factory"
            android:id="@+id/imageButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="70dp"
            android:background="@drawable/factory_btn" />



        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_Market"
            android:id="@+id/imageButton3"
            android:onClick="onMarket"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="70dp"
            android:background="@drawable/market_btn" />
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/button_government"
            android:id="@+id/imageButton2"
            android:layout_alignTop="@+id/imageButton"
            android:layout_marginLeft="70dp"
            android:background="@drawable/th_btn"
            android:onClick="onBack" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_NextTurn"
            android:id="@+id/button3"
            android:onClick="onNextTurn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="70dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TotalMoney"
        android:textSize="23dp"
        android:textStyle="bold"
        android:id="@+id/f_ttm"
        android:textColor="@color/whiteColor"
        android:layout_marginLeft="190dp"
        android:layout_alignBaseline="@+id/f_tem"
        android:layout_alignBottom="@+id/f_tem"
        android:layout_toEndOf="@+id/i_maxUnit"
        android:layout_marginStart="115dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inTurn"
        android:textStyle="bold"
        android:textSize="24sp"
        android:id="@+id/f_it"
        android:textColor="@color/whiteColor"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/f_tem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Temperature"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:id="@+id/f_tem"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/linearLayout7" />
</RelativeLayout>
